fix button overlapping heading

--- a/src/assets/scss/_core.scss
+++ b/src/assets/scss/_core.scss
@@ -50,6 +50,10 @@ a:focus {
     margin-top: 1rem !important;
 }
 
+.mb-2rem {
+    margin-bottom: 2rem !important;
+}
+
 .mt-2rem {
     margin-top: 2rem !important;
 }
